<resources>
    <string name="app_name">Integral</string>
    <string name="category_1">Rational</string>
    <string name="category_2">Exponential</string>
    <string name="category_3">Logarithms</string>
    <string name="category_4">Trigonometric</string>
    <string name="category_5">Inverse trigonometric</string>
    <string name="category_6">Hyperbolic</string>
    <string name="category_7">Inverse hyperbolic</string>
    <string name="category_8">Second derivatives</string>
    <string name="category_9">Absolute-value</string>
    <string name="category_10">Special</string>
    <string name="category_11">Definite integrals</string>
    <string name="formula_1_1" translatable="false">k</string>
    <string name="formula_1_2" translatable="false">x^a</string>
    <string name="formula_1_3" translatable="false">(ax+b)^n</string>
    <string name="formula_1_4" translatable="false">1/x</string>
    <string name="formula_1_5" translatable="false">1/x general</string>
    <string name="formula_1_6" translatable="false">c/(ax)</string>
    <string name="formula_1_7" translatable="false">7</string>
    <string name="formula_1_8" translatable="false">8</string>
    <string name="formula_1_9" translatable="false">9</string>
    <string name="formula_1_10" translatable="false">10</string>
    <string name="formula_1_11" translatable="false">11</string>
    <string name="formula_1_12" translatable="false">12</string>
    <string name="formula_1_13" translatable="false">13</string>
    <string name="formula_1_14" translatable="false">14</string>
    <string name="formula_1_15" translatable="false">15</string>
    <string name="formula_1_16" translatable="false">16</string>
    <string name="formula_1_17" translatable="false">17</string>
    <string name="formula_1_18" translatable="false">18</string>
    <string name="formula_1_19" translatable="false">19</string>
    <string name="formula_1_20" translatable="false">20</string>
    <string name="formula_1_21" translatable="false">21</string>
    <string name="formula_2_1" translatable="false">e^(ax)</string>
    <string name="formula_2_2" translatable="false">f\'e^f</string>
    <string name="formula_2_3" translatable="false">a^x</string>
    <string name="formula_2_4" translatable="false">4</string>
    <string name="formula_2_5" translatable="false">5</string>
    <string name="formula_2_6" translatable="false">6</string>
    <string name="formula_2_7" translatable="false">7</string>
    <string name="formula_2_8" translatable="false">8</string>
    <string name="formula_2_9" translatable="false">9</string>
    <string name="formula_2_10" translatable="false">10</string>
    <string name="formula_2_11" translatable="false">11</string>
    <string name="formula_2_12" translatable="false">12</string>
    <string name="formula_3_1" translatable="false">ln(x)</string>
    <string name="formula_3_2" translatable="false">log(x)</string>
    <string name="formula_3_3" translatable="false">3</string>
    <string name="formula_3_4" translatable="false">4</string>
    <string name="formula_3_5" translatable="false">5</string>
    <string name="formula_3_6" translatable="false">6</string>
    <string name="formula_3_7" translatable="false">7</string>
    <string name="formula_3_8" translatable="false">8</string>
    <string name="formula_3_9" translatable="false">9</string>
    <string name="formula_3_10" translatable="false">10</string>
    <string name="formula_3_11" translatable="false">11</string>
    <string name="formula_3_12" translatable="false">12</string>
    <string name="formula_3_13" translatable="false">13</string>
    <string name="formula_3_14" translatable="false">14</string>
    <string name="formula_3_15" translatable="false">15</string>
    <string name="formula_3_16" translatable="false">16</string>
    <string name="formula_3_17" translatable="false">17</string>
    <string name="formula_3_18" translatable="false">18</string>
    <string name="formula_3_19" translatable="false">19</string>
    <string name="formula_3_20" translatable="false">20</string>
    <string name="formula_3_21" translatable="false">21</string>
    <string name="formula_3_22" translatable="false">22</string>
    <string name="formula_3_23" translatable="false">23</string>
    <string name="formula_3_24" translatable="false">24</string>
    <string name="formula_3_25" translatable="false">25</string>
    <string name="formula_3_26" translatable="false">26</string>
    <string name="formula_4_1" translatable="false">sin(x)</string>
    <string name="formula_4_2" translatable="false">cos(x)</string>
    <string name="formula_4_3" translatable="false">tan(x)</string>
    <string name="formula_4_4" translatable="false">cot(x)</string>
    <string name="formula_4_5" translatable="false">sec(x)</string>
    <string name="formula_4_6" translatable="false">csc(x)</string>
    <string name="formula_4_7" translatable="false">sec2(x)</string>
    <string name="formula_4_8" translatable="false">csc2(x)</string>
    <string name="formula_4_9" translatable="false">sec(x)tan(x)</string>
    <string name="formula_4_10" translatable="false">csc(x)cot(x)</string>
    <string name="formula_4_11" translatable="false">sin2(x)</string>
    <string name="formula_4_12" translatable="false">cos2(x)</string>
    <string name="formula_4_13" translatable="false">sec3(x)</string>
    <string name="formula_4_14" translatable="false">sinn(x)</string>
    <string name="formula_4_15" translatable="false">cosn(x)</string>
    <string name="formula_4_16" translatable="false">16</string>
    <string name="formula_4_17" translatable="false">17</string>
    <string name="formula_4_18" translatable="false">18</string>
    <string name="formula_4_19" translatable="false">19</string>
    <string name="formula_4_20" translatable="false">20</string>
    <string name="formula_4_21" translatable="false">21</string>
    <string name="formula_4_22" translatable="false">22</string>
    <string name="formula_4_23" translatable="false">23</string>
    <string name="formula_4_24" translatable="false">24</string>
    <string name="formula_4_25" translatable="false">25</string>
    <string name="formula_4_26" translatable="false">26</string>
    <string name="formula_4_27" translatable="false">27</string>
    <string name="formula_4_28" translatable="false">28</string>
    <string name="formula_4_29" translatable="false">29</string>
    <string name="formula_4_30" translatable="false">30</string>
    <string name="formula_4_31" translatable="false">31</string>
    <string name="formula_4_32" translatable="false">32</string>
    <string name="formula_4_33" translatable="false">33</string>
    <string name="formula_4_34" translatable="false">34</string>
    <string name="formula_4_35" translatable="false">35</string>
    <string name="formula_4_36" translatable="false">36</string>
    <string name="formula_4_37" translatable="false">37</string>
    <string name="formula_4_38" translatable="false">38</string>
    <string name="formula_4_39" translatable="false">39</string>
    <string name="formula_4_40" translatable="false">40</string>
    <string name="formula_4_41" translatable="false">41</string>
    <string name="formula_4_42" translatable="false">42</string>
    <string name="formula_4_43" translatable="false">43</string>
    <string name="formula_4_44" translatable="false">44</string>
    <string name="formula_4_45" translatable="false">45</string>
    <string name="formula_4_46" translatable="false">46</string>
    <string name="formula_4_47" translatable="false">47</string>
    <string name="formula_4_48" translatable="false">48</string>
    <string name="formula_4_49" translatable="false">49</string>
    <string name="formula_4_50" translatable="false">50</string>
    <string name="formula_4_51" translatable="false">51</string>
    <string name="formula_4_52" translatable="false">52</string>
    <string name="formula_4_53" translatable="false">53</string>
    <string name="formula_4_54" translatable="false">54</string>
    <string name="formula_4_55" translatable="false">55</string>
    <string name="formula_4_56" translatable="false">56</string>
    <string name="formula_4_57" translatable="false">57</string>
    <string name="formula_4_58" translatable="false">58</string>
    <string name="formula_4_59" translatable="false">59</string>
    <string name="formula_4_60" translatable="false">60</string>
    <string name="formula_4_61" translatable="false">61</string>
    <string name="formula_4_62" translatable="false">62</string>
    <string name="formula_4_63" translatable="false">63</string>
    <string name="formula_4_64" translatable="false">64</string>
    <string name="formula_5_1" translatable="false">arcsin(x)</string>
    <string name="formula_5_2" translatable="false">arccos(x)</string>
    <string name="formula_5_3" translatable="false">arctan(x)</string>
    <string name="formula_5_4" translatable="false">arccot(x)</string>
    <string name="formula_5_5" translatable="false">arcsec(x)</string>
    <string name="formula_5_6" translatable="false">arccsc(x)</string>
    <string name="formula_5_7" translatable="false">7</string>
    <string name="formula_5_8" translatable="false">8</string>
    <string name="formula_5_9" translatable="false">9</string>
    <string name="function">Function</string>
    <string name="lower_limit">Lower Limit (a)</string>
    <string name="upper_limit">Upper Limit (b)</string>
    <string name="steps">Steps (n)</string>
    <string name="trapezoidal" translatable="false">Trapezoidal</string>
    <string name="simpson" translatable="false">Simpson</string>
    <string name="romberg" translatable="false">Romberg</string>
    <string name="calculate">Calculate</string>
    <string name="solver">Calculator</string>
    <string name="solver_function_info" translatable="false">+, -, *, /, ^, (, ), sin, cos, sinh, cosh, tan, tanh, asin, acos, atan, e, pi, ln, log, sqrt, cbrt</string>
    <string name="method">Method</string>
    <string name="settings">Settings</string>
    <string name="settings_pro_version">PRO Version</string>
    <string name="settings_report_bug">Report a Bug</string>
    <string name="settings_rate">Rate the App</string>
    <string name="settings_contribute">Contribute in Development</string>
    <string name="category">Formula</string>
    <string name="plot">Plot</string>
    <string name="profile">Profile</string>
    <string name="angle">Angle</string>
    <string name="degree">Degree</string>
    <string name="radian">Radian</string>
    <string name="arc">Arc</string>
    <string name="sin_title">Sine</string>
    <string name="cos_title">Cosine</string>
    <string name="tan_title">Tangent</string>
    <string name="cot_title">Cotangent</string>
    <string name="csc_title">Cosecant</string>
    <string name="sec_title">Secant</string>
    <string name="sin" translatable="false">sin(θ)</string>
    <string name="cos" translatable="false">cos(θ)</string>
    <string name="tan" translatable="false">tan(θ)</string>
    <string name="cot" translatable="false">cot(θ)</string>
    <string name="csc" translatable="false">csc(θ)</string>
    <string name="sec" translatable="false">sec(θ)</string>
    <string name="asin_title">Inverse Sine</string>
    <string name="acos_title">Inverse Cosine</string>
    <string name="atan_title">Inverse Tangent</string>
    <string name="acot_title">Inverse Cotangent</string>
    <string name="acsc_title">Inverse Cosecant</string>
    <string name="asec_title">Inverse Secant</string>
    <string name="asin" translatable="false">arcsin(x)</string>
    <string name="acos" translatable="false">arccos(x)</string>
    <string name="atan" translatable="false">arctan(x)</string>
    <string name="acot" translatable="false">arccot(x)</string>
    <string name="acsc" translatable="false">arccsc(x)</string>
    <string name="asec" translatable="false">arcsec(x)</string>
</resources>