<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingBottom="24dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/angleLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/angle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/angle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedButton="@id/degree"
                android:layout_gravity="end"
                app:singleSelection="true">

                <Button
                    android:id="@+id/degree"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree" />

                <Button
                    android:id="@+id/radian"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radian" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/sinScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/sin_title"
                app:screenSubtitle="@string/sin"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/cosScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/cos_title"
                app:screenSubtitle="@string/cos"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/tanScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/tan_title"
                app:screenSubtitle="@string/tan"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/cotScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/cot_title"
                app:screenSubtitle="@string/cot"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/cscScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/csc_title"
                app:screenSubtitle="@string/csc"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

            <com.armanco.integral.ui.component.SolverScreenView
                android:id="@+id/secScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:screenTitle="@string/sec_title"
                app:screenSubtitle="@string/sec"
                app:screenResult="0.0"
                android:layout_marginTop="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>