<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.solver.SolverFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingHorizontal="24dp"
        style="@style/SolverScreen"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/calculate"
        app:layout_constraintTop_toBottomOf="@id/result">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/function"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/function" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:alpha="0.5"
                android:text="@string/solver_function_info" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/lower_limit"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lowerLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lower_limit"
                android:lines="1"
                android:inputType="numberDecimal" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/upper_limit"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/upperLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upper_limit"
                android:lines="1"
                android:inputType="numberDecimal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/stepsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/steps"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/steps"
                android:lines="1"
                android:inputType="number" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/method"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/trapezoidal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trapezoidal" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/simpson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpson" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/romberg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/romberg" />

            </RadioGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/calculate"
        app:icon="@drawable/ic_baseline_calculate_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>